fix: prevent overflow in global styles

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,7 @@
     border: 0;
     box-sizing: border-box;
     font-family: "Ubuntu Sans", sans-serif;
+    overflow: hidden;
 }
 
 body{
